[package]
name = "client"
version = "0.1.0"
authors = ["Santiago Quiroga <quirogas@mail.gvsu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.18", features = ["macros", "rt-core"] }
hyper = "0.13.4"
hyper-tls =  "0.4.1"
